force-app/main/default/objects/FieldKo_Kinetics_Setting__c/FieldKo_Kinetics_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>FieldKo Kinetics Setting</label>
</CustomObject>