force-app/main/default/objects/FieldKo_Kinetics_Setting__c/fields/Create_Event__c.field-meta.xml
<CustomField>
    <fullName>Create_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create Event for each invite status update, so that is visible in activity timeline</description>
    <inlineHelpText>Create Event for each invite status update, so that is visible in activity timeline</inlineHelpText>
    <label>Create Event</label>
    <type>Checkbox</type>
</CustomField>