force-app/main/default/objects/FieldKo_Kinetics_Setting__c/fields/Field_Name_for_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Field_Name_for_Lookup__c</fullName>
    <description>Capture Field API Name on Question Object that is used to show more information about parent record</description>
    <inlineHelpText>Capture Field API Name on Question Object that is used to show more information about parent record</inlineHelpText>
    <label>Field Name for Lookup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>