force-app/main/default/objects/FieldKo_Kinetics_Setting__c/fields/Form_Renderer_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_Renderer_Page_URL__c</fullName>
    <description>Capture Community page URL where Kinetic form is rendered</description>
    <inlineHelpText>Capture Community page URL where Kinetic form is rendered</inlineHelpText>
    <label>Form Renderer Page URL</label>
    <type>Url</type>
</CustomField>