force-app/main/default/objects/FieldKo_Kinetics_Setting__c/fields/Google_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Google_API_Key__c</fullName>
    <description>Used to store Google API Key</description>
    <inlineHelpText>Used to store Google API Key</inlineHelpText>
    <label>Google API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>