force-app/main/default/objects/FieldKo_Kinetics_Setting__c/fields/Logo_Document_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Logo_Document_API_Name__c</fullName>
    <description>Specify Logo logo Document API Name</description>
    <inlineHelpText>Specify Logo logo Document API Name</inlineHelpText>
    <label>Logo Document API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>