force-app/main/default/objects/FieldKo_Kinetics_Setting__c/fields/SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>SMS_Template__c</fullName>
    <defaultValue>&quot;Please click the following link to start your survey: {{pageUrl}}&quot;</defaultValue>
    <label>SMS Template</label>
    <length>120</length>
    <type>Text</type>
</CustomField>